--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,10 @@ keys
 .DS_Store
 .DS_Store?
 ._*
-__pycache__
 .Spotlight-V100
 .Trashes
 ehthumbs.db
 Thumbs.db
+# OS generated folders #
+######################
+__pycache__/
